# LeagueSkinManagerVN

./: .gitignore  README.md  README.txt  build.py  pyproject.toml
src/: config.py  main.py  skin_downloader.py  skin_installer.py  uninstall.py  update_checker.py
